bug/P#127673-headline-text-wrap (#65)
* added text-wrap-style: balance;

* added text-wrap-style: balance to headings in o-text

--- a/src/sass/50_objects/_objects.headings.scss
+++ b/src/sass/50_objects/_objects.headings.scss
@@ -2,6 +2,7 @@
   font-family: $font-family-headline;
   font-weight: $font-weight-headline;
   hyphens: auto;
+  text-wrap-style: balance;
   @include media-breakpoint-up(sm) {
     hyphens: manual;
   }
